# marian-example-library

./: .gitmodules  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
script/: read-npz.py
src/: CMakeLists.txt  main.cpp
